--- a/css/home-page-styles.css
+++ b/css/home-page-styles.css
@@ -26,9 +26,9 @@ font-family: 'Lato', sans-serif;
 	margin-right: auto;
 	margin-bottom: 20px;
 	/*padding-left: 60px;
-	padding-top: 20px;*/
-/*	height: 140px;
-*/	width: 90%;
+	padding-top: 20px;
+  height: 140px;*/
+	width: 90%;
 	background-color: white;
 	font-size: 13px;
 	color: #8D8D8D;
